--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.example.sam_chordas.stockhawk"
+        applicationId "com.sam_chordas.android.stockhawk"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -25,15 +26,17 @@ repositories {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
-    compile 'net.simonvt.schematic:schematic:0.6.3'
-    compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile "com.google.android.gms:play-services-gcm:8.3.0"
+//    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    apt 'net.simonvt.schematic:schematic-compiler:0.6.4'
+    compile 'net.simonvt.schematic:schematic:0.6.4'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.diogobernardino:williamchart:2.2'
     compile 'com.jakewharton:butterknife:8.0.1'
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
+    compile 'com.google.code.gson:gson:2.4'
+    compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.2.0'
+    compile('com.github.afollestad.material-dialogs:commons:0.8.5.8@aar') {
         transitive = true
     }
 }
