--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.google.android.gcm.demo.permission.C2D_MESSAGE" />
 
     <permission
-        android:name="com.google.android.gcm.demo.permission.C2D_MESSAGE"
+        android:name="com.sam_chordas.android.stockhawk.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+    <uses-permission android:name="com.sam_chordas.android.stockhawk.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
